# pelican-katburst

./: .gitignore  K7_Pipeline.xml  K7_Server.xml  K7_UdpPipeline.xml  install.txt
src/: ABServerMain.cpp  CMakeLists.txt  K7ServerMain.cpp
src/cmake/: compilerDefaults.cmake
src/lib/: ABDataAdapter.h  BandPass.h  BinMap.h  BufferingDataClient.h  CMakeLists.txt  DedispersionDataAnalysisOutput.h  DedispersionEvent.h  DedispersionModule.h  DedispersionParameters.h  K7BufDataClient.h  K7Chunker.h  K7DataAdapter.h  K7DataClient.h  K7Packet.h  LofarUdpHeader.h  RFI_Clipper.h  SigprocStokesWriter.h
src/lib/src/: ABDataAdapter.cpp  BandPass.cpp  BandPassAdapter.cpp  BandPassRecorder.cpp  BinMap.cpp  BufferingAgent.cpp  BufferingDataClient.cpp  DedispersionDataAnalysisOutput.cpp  DedispersionModule.cpp  K7Chunker.cpp  K7DataAdapter.cpp  K7DataClient.cpp  RFI_Clipper.cpp  SigprocAdapter.cpp  SigprocStokesWriter.cpp
src/lib/test/: CMakeLists.txt  K7Emulator.h  K7EmulatorTest.py
src/lib/test/src/: K7Emulator.cpp  K7EmulatorMain.cpp
src/pipelines/udpstream/: ABPipeline.h  CMakeLists.txt  K7Pipeline.h  K7UdpPipeline.h  SigprocPipeline.h
src/pipelines/udpstream/data/: K7_Emulator.xml  K7_GpuPipeline.xml  K7_Pipeline.xml  K7_Server.xml  K7_UdpPipeline.xml  kat7_0032ch.bp  kat7_0064ch.bp  kat7_0128ch.bp  kat7_0256ch.bp  kat7_0512ch.bp  kat7_1024ch.bp  kat7_128ch.bp  kat7_256ch.bp  kat7_512ch.bp  kat7_64ch.bp
src/pipelines/udpstream/src/: ABPipeline.cpp  ABPipelineMain.cpp  K7Pipeline.cpp  K7PipelineMain.cpp  K7UdpPipeline.cpp  K7UdpPipelineMain.cpp  SigprocPipeline.cpp  SigprocPipelineMain.cpp
src/pipelines/udpstream/test/: CMakeLists.txt
src/useful/: ICBFTest.py  K7EmulatorTest.py  fitband2.py  generateUDP.py  greps  plotFilterbank.py  plot_filterbank.py  startGpuPipeline.sh  startK7Server.py  startK7Server.sh  startUdpPipeline.sh
src/viewer/: CMakeLists.txt
